--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
   <head>
     <title><%= content_for(:title) || "Vue Practice" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -34,6 +34,8 @@
   </head>
 
   <body>
+<!--  <p class="notice"><%#= notice %></p>-->
+<!--  <p class="alert"><%#= alert %></p>-->
     <%= yield %>
   </body>
 </html>
