devise and login card

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="dark">
+<html>
   <head>
     <title><%= content_for(:title) || "Vue Practice" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -34,8 +34,14 @@
   </head>
 
   <body>
-<!--  <p class="notice"><%#= notice %></p>-->
-<!--  <p class="alert"><%#= alert %></p>-->
-    <%= yield %>
+    <!--  <p class="notice"><%#= notice %></p>-->
+    <!--  <p class="alert"><%#= alert %></p>-->
+    <%= content_tag(:div, "", id: "app") %>
+
+    <div class="container w-full mx-auto">
+      <div class="card bg-neutral h-screen">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
