--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,10 @@
-<%= content_tag(:div, "", id: "app") %>
+<div class="card bg-slate-500 text-accent w-96 place-self-center mt-36">
+  <div class="card-body items-center text-center">
+    <h2 class="card-title">Welcome!</h2>
+    <p>Login or Register to begin</p>
+    <div class="card-actions">
+      <button class="btn btn-primary">Login</button>
+      <button class="btn btn-primary">Register</button>
+    </div>
+  </div>
+</div>
