--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h2 class="card-title">Welcome!</h2>
     <p>Login or Register to begin</p>
     <div class="card-actions">
-      <button class="btn btn-primary">Login</button>
+      <%= link_to "Login", new_user_session_path, class: "btn btn-primary" %>
       <button class="btn btn-primary">Register</button>
     </div>
   </div>
